// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description component should render Description component with props 1`] = `
<div
  className="description"
>
  <h2
    className="description__title"
  >
    title
  </h2>
  <div
    className="description__specification"
  >
    <span
      className="specification__genre specification__genre_1"
    >
      genres
    </span>
    <div
      className="specification__border"
    />
    <div
      className="specification__duration"
    >
      <span
        className="duration__time"
      >
        1h 1m
      </span>
    </div>
  </div>
  <Rating
    voteAverage={10}
  />
</div>
`;

exports[`Description component should render Description component without props 1`] = `
<div
  className="description"
>
  <h2
    className="description__title"
  />
  <div
    className="description__specification"
  >
    <span
      className="specification__genre specification__genre_1"
    />
    <div
      className="specification__border"
    />
    <div
      className="specification__duration"
    >
      <span
        className="duration__time"
      >
        0h 0m
      </span>
    </div>
  </div>
  <Rating
    voteAverage={0}
  />
</div>
`;
